# haskBoard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Main.imports  README.md  cabal.project  cabal.project.freeze  cabal.project.freeze_old_kinda  error.txt  haskBoard.cabal  hie.yaml  log  report.html  todo.md  warnings.txt
Games/: cantStop.cabal  log  log1  log10  log100  log11  log12  log13  log14  log15  log16  log17  log18  log19  log2  log20  log21  log22  log23  log24  log25  log26  log27  log28  log29  log3  log30  log31  log32  log33  log34  log35  log36  log37  log38  log39  log4  log40  log41  log42  (+63 more)
Games/CantStop/: Agent.hs  CantStop.hs  Dice.hs  Display.hs  Draw.hs  GridSelector.hs  Helpers.hs  Main.hs  Objects.hs  Panel.hs  Plays.hs  Tui.hs  cantStop.cabal
Games/LoveLetter/: Agent.hs  LoveLetter.hs  Main.hs  Objects.hs  Text.hs  Tui.hs  loveLetter.cabal
Games/NoMerci/: Agent.hs  Main.hs  NoMerci.hs  Objects.hs  Tui.hs  noMerci.cabal
Games/NoMerci/app/: Main.hs
Helpers/: Cards.hs  Helpers.hs  Track.hs  (+2 more)
haskBoard/: Data.hs  haskBoard.cabal
haskBoard/src/: Count.hs  FinitaryMap.hs  Game.hs  GameE.hs  GameEffect.hs  GameNode.hs  Helpers.hs  Location.hs  Log.hs  Menu.hs  Plays.md  Run.hs  ShuffleRNG.hs  Stuff.hs  TreeControl.hs  TreeMonad.hs  Util.hs  View.hs  Visibility.hs
haskBoard/src/Brick/: Main.hs
haskBoard/src/Brick/Game/: Main.hs  Tui.hs
haskBoard/src/Brick/Widgets/: TextStream.hs
haskBoard/src/Game/: Agent.hs  Choose.hs  Condition.hs  Constraints.hs  Control.hs  Controller.hs  Data.hs  Display.hs  Game.hs  GameAction.hs  GameE.hs  GameNode.hs  GameState.hs  GameStateBase.hs  Helpers.hs  Location.hs  Log.hs  Monad.hs  Objects.hs  Options.hs  Player.hs  Rules.hs  Run.hs  Trigger.hs  View.hs  Visibility.hs
haskBoard/src/Interface/: Agent.hs  Choose.hs  Controller.hs  Hint.hs  Protocol.hs  Server.hs  Stdio.hs  Training.hs
haskBoard/src/Run/: Game.hs  Server.hs  Stdio.hs
haskBoard/src/scratch/: Poly.hs
haskBoard/test/: Main.hs  TestCount.hs  TestFinitaryMap.hs  TestLocation.hs  TestUtil.hs
python/: collect_bc.py  collect_rllib.py  haskboard_aec_env.py  haskboard_env.py  haskboard_rl_module.py  ippo.yaml  ippo_instrumented.py  main.py  main2.py  pipeline.py  pyproject.toml  train_bc.py  train_rllib.py  training_dashboard.py  training_loop.py  training_metrics.py  wrappers.py  ws_agent.py  ws_agent_lite.py  ws_agent_rllib.py
python/runs/NoMerci_default_3/rllib_checkpoints/: algorithm_state.pkl  class_and_ctor_args.pkl
python/runs/NoMerci_default_3/rllib_checkpoints/env_runner/: class_and_ctor_args.pkl
python/runs/NoMerci_default_3/rllib_checkpoints/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
python/runs/NoMerci_default_3/rllib_checkpoints/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
python/runs/NoMerci_default_3/rllib_checkpoints/learner_group/: class_and_ctor_args.pkl
python/runs/NoMerci_default_3/rllib_checkpoints/learner_group/learner/: class_and_ctor_args.pkl
python/runs/NoMerci_default_3/rllib_checkpoints/learner_group/learner/rl_module/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/: progress.json
python/runs/default_lrem5_3/rllib_checkpoints/: algorithm_state.pkl  class_and_ctor_args.pkl
python/runs/default_lrem5_3/rllib_checkpoints/env_runner/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/rllib_checkpoints/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/rllib_checkpoints/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/rllib_checkpoints/learner_group/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/rllib_checkpoints/learner_group/learner/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/rllib_checkpoints/learner_group/learner/rl_module/: class_and_ctor_args.pkl
python/runs/default_lrem5_3/tensorboard/: events.out.tfevents.1782910320.comquter.6406.0  events.out.tfevents.1782910530.comquter.6479.0
python/runs/default_lrem5_4/: progress.json
python/runs/default_lrem5_4/rllib_checkpoints/: algorithm_state.pkl  class_and_ctor_args.pkl
python/runs/default_lrem5_4/rllib_checkpoints/env_runner/: class_and_ctor_args.pkl
python/runs/default_lrem5_4/rllib_checkpoints/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
python/runs/default_lrem5_4/rllib_checkpoints/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
python/runs/default_lrem5_4/rllib_checkpoints/learner_group/: class_and_ctor_args.pkl
python/runs/default_lrem5_4/rllib_checkpoints/learner_group/learner/: class_and_ctor_args.pkl
python/runs/default_lrem5_4/tensorboard/: events.out.tfevents.1782912929.comquter.8802.0  events.out.tfevents.1782913206.comquter.8978.0
python/runs/default_lrem5_5/: progress.json
python/runs/default_lrem5_5/rllib_checkpoints/: algorithm_state.pkl  class_and_ctor_args.pkl
python/runs/default_lrem5_5/rllib_checkpoints/env_runner/: class_and_ctor_args.pkl
python/runs/default_lrem5_5/rllib_checkpoints/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
python/runs/default_lrem5_5/rllib_checkpoints/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
python/runs/default_lrem5_5/rllib_checkpoints/learner_group/: class_and_ctor_args.pkl
python/runs/default_lrem5_5/rllib_checkpoints/learner_group/learner/: class_and_ctor_args.pkl
python/runs/default_lrem5_5/tensorboard/: events.out.tfevents.1782916079.comquter.13512.0  events.out.tfevents.1782916428.comquter.14066.0
python/runs_pre_default/: _0_10240.pt  _0_102400.pt  _0_114688.pt  _0_126976.pt  _0_133120.pt  _0_151552.pt  _0_161536.pt  _0_173056.pt  _0_20480.pt  _0_30720.pt  _0_40960.pt  _0_51200.pt  _0_61440.pt  _0_71680.pt  _0_81920.pt  _0_92160.pt  _1_10240.pt  _1_102400.pt  _1_114688.pt  _1_126976.pt  _1_133120.pt  _1_151552.pt  _1_163840.pt  _1_173056.pt  _1_20480.pt  _1_30720.pt  _1_40960.pt  _1_51200.pt  _1_61440.pt  _1_71680.pt  _1_81920.pt  _1_94208.pt  _2_10240.pt  _2_102400.pt  _2_112640.pt  _2_122880.pt  _2_139264.pt  _2_151552.pt  _2_161536.pt  _2_173056.pt  (+56 more)
(+52 files in other folders)
