cabal-version:      2.4
name:               haskBoard
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Saltz
maintainer:         saltz.adam@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    build-depends: base, containers,lens, generic-lens, array, these,
                transformers, text, formatting, MonadRandom, random, prettyprinter,
                effectful, effectful-core, mtl, finitary, defaultable-map, mmorph
    exposed-modules: Count, Location, Game, Util, Game.Condition, Game.Player, Games.CantStop, Game.Control, Game.Trigger, Game.ActionChoice, FinitaryMap
    default-language: Haskell2010
    ghc-options:  -Wall
    -- Modules included in this executable, other than Main.
    -- other-modules:
