cabal-version:      2.4
name:               CantStop
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Saltz
maintainer:         saltz.adam@gmail.com

library
    hs-source-dirs: CantStop
    build-depends: base, containers,lens, generic-lens, array, these,
                transformers, text, formatting, MonadRandom, random, prettyprinter,
                effectful, effectful-core, mtl, finitary, defaultable-map, mmorph,
                brick,
                haskBoard
    exposed-modules: CantStop, Tui, Dice
    default-language: Haskell2010
    ghc-options:  -Wall
    -- Modules included in this executable, other than Main.
    -- other-modules:


