cabal-version:      2.4
name:               haskBoard
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Saltz
maintainer:         saltz.adam@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    build-depends: base, containers,lens, generic-lens, array, these,
                transformers, text, formatting, MonadRandom, random, prettyprinter,
                effectful, effectful-core, mtl,
                crypto-rng-effectful, effectful-plugin,
                list-transformer, random-shuffle
    exposed-modules: Count, FinitaryMap, Game.Location, Game.GameE, Game.Player,Game.Options,Game.GameNode, Log,   TreeMonad, Util, Game.Visibility, Game.Helpers, Game.View, Game.Run, Game.GameState, Game.Choose, Game.Monad
    default-language: Haskell2010
    default-extensions: DeriveFunctor, DeriveGeneric, FlexibleContexts, GADTs, TypeApplications, FlexibleInstances
    ghc-options:  -Wall -fplugin=Effectful.Plugin
    -- Modules included in this executable, other than Main.
    -- other-modules:

test-suite haskboard-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends: base, containers, lens, QuickCheck, tasty, haskBoard,  tasty-quickcheck
  other-modules: TestCount, TestFinitaryMap, TestLocation
  ghc-options: -Wall
  default-language: Haskell2010
