cabal-version:      2.4
name:               haskBoard
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Saltz
maintainer:         saltz.adam@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/mstksg/typelit-witnesses/typelit-witnesses.git



library
    hs-source-dirs: src
    build-depends: base, containers,lens, generic-lens,
                transformers, text,  MonadRandom, random,
                effectful, effectful-core, mtl,
                crypto-rng-effectful, effectful-plugin, async,
                 random-shuffle, finitary, ghc-typelits-knownnat, brick, finite-typelits, vty, safe,
                  free,  word-wrap, generics-sop, foldable1-classes-compat, aeson, websockets, digits, bytestring, nonempty-containers, process
    exposed-modules: FinitaryMap, Game.Location, Game.GameE, Game.Player,Game.Options,Game.GameAction, Log,    Util, Game.Visibility,  Run, Game.GameState, Game.GameStateBase, Game.Choose,  Game.View,  Game.Agent, Brick.Game.Tui,Game.Rules, Interface.Choose, ShuffleRNG, Interface.Agent, Interface.Controller, Brick.Widgets.TextStream, Interface.Server, Interface.Stdio, Interface.Training, Game.Constraints, Interface.Hint
    default-language: Haskell2010
    default-extensions: DeriveFunctor, DeriveGeneric, FlexibleContexts, GADTs, TypeApplications, FlexibleInstances, DataKinds, DuplicateRecordFields, OverloadedLabels, ScopedTypeVariables, TypeOperators, FlexibleInstances, NoFieldSelectors, GADTs, MultiParamTypeClasses, GeneralizedNewtypeDeriving
    ghc-options:  -Wall -fplugin=Effectful.Plugin -fplugin=GHC.TypeLits.KnownNat.Solver 
    -- Modules included in this executable, other than Main.
    -- other-modules:
--
-- test-suite haskboard-test
--   type: exitcode-stdio-1.0
--   main-is: Main.hs
--   hs-source-dirs: test
--   build-depends: base, containers, lens, QuickCheck, tasty, haskBoard,  tasty-quickcheck
--   other-modules: TestCount, TestFinitaryMap, TestLocation
--   ghc-options: -Wall
--   default-language: Haskell2010
