[project]
name = "haskboard"
version = "0.1.0"
description = "Python training interface for haskboard MARL games"
requires-python = ">=3.10"
dependencies = [
    "agilerl",
    "basedpyright>=1.39.6",
    "gymnasium",
    "numpy",
    "pettingzoo",
    "setuptools==81.0.0",
    "tensorboard",
    "torch",
    "websockets",
]

[project.scripts]
train = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
