[project]
name = "haskboard"
version = "0.1.0"
description = "Python training interface for haskboard MARL games"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "agilerl",
    "basedpyright>=1.39.6",
    "gymnasium",
    "matplotlib>=3.9.4",
    "numpy",
    "orjson>=3.11.9",
    "pettingzoo",
    "ray[rllib]>=2.40",
    "setuptools==81.0.0",
    "tensorboard",
    "tensorflow>=2.20.0",
    "torch",
    "websockets",
]

[project.scripts]
train = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
