cabal-version:      2.4
name:               CantStop
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Saltz
maintainer:         saltz.adam@gmail.com

library
    hs-source-dirs: .
    build-depends: base, containers,lens, generic-lens, array, these,
                transformers, text, formatting, MonadRandom, random, prettyprinter,
                effectful, effectful-core, mtl,
                brick, effectful-plugin, haskBoard, vty, safe, finitary
    exposed-modules: CantStop, Tui,GridSelector, Panel, Dice, Objects, Draw
    -- , Tui, Dice
    default-extensions: DeriveFunctor, DeriveGeneric, FlexibleContexts, GADTs, TypeApplications, FlexibleInstances, DataKinds, DuplicateRecordFields, OverloadedLabels, ScopedTypeVariables, TypeOperators, FlexibleInstances, NoFieldSelectors, GADTs, MultiParamTypeClasses
    default-language: Haskell2010
    ghc-options:  -Wall -fplugin=Effectful.Plugin -threaded
    -- Modules included in this executable, other than Main.
    -- other-modules:

executable CantStop
    main-is: Main.hs
    hs-source-dirs: .
    build-depends: base, CantStop, haskBoard, containers,lens, generic-lens, array, these,
                transformers, text, formatting, MonadRandom, random, prettyprinter,
                effectful, effectful-core, mtl,
                brick, effectful-plugin, haskBoard, vty, safe, finitary
    default-extensions: DeriveFunctor, DeriveGeneric, FlexibleContexts, GADTs, TypeApplications, FlexibleInstances, DataKinds, DuplicateRecordFields, OverloadedLabels, ScopedTypeVariables, TypeOperators, FlexibleInstances, NoFieldSelectors, GADTs, MultiParamTypeClasses
    default-language: Haskell2010
    ghc-options: -fplugin=Effectful.Plugin -threaded
